Added all changes

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,9 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+
+
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us for a Free Painting Quote | TD Painters Toronto</title>
@@ -177,8 +180,7 @@
             </div>
             <div class="relative z-10 text-center text-white px-4 max-w-4xl fade-on-scroll">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 tracking-tight">Request Your Free Quote</h1>
-                <p class="text-xl text-blue-100 font-light">We're ready to help. Fill out the form below or give us a
-                    call.</p>
+                <p class="text-xl text-blue-100 font-light">We're ready to help. Fill out the form below or text us.</p>
             </div>
         </section>
 
@@ -190,8 +192,9 @@
                         class="bg-white p-8 md:p-10 rounded-3xl shadow-xl border border-slate-100 fade-on-scroll order-2 lg:order-1">
                         <div class="mb-8">
                             <h2 class="text-2xl font-bold text-slate-900">Send Us a Message</h2>
-                            <p class="text-slate-500 mt-2">For the fastest quote, please provide as much detail as
-                                possible.</p>
+                            <p class="text-slate-500 mt-2">
+                                For a more accurate quote, please provide as much detail as possible.
+                            </p>
                         </div>
 
                         <form action="mailto:info@tdpainters.com" method="post" enctype="text/plain" class="space-y-6">
@@ -325,6 +328,25 @@
                                     York</span>
                                 <span
                                     class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Scarborough</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">York
+                                    Region</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Hamilton</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Caledon</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Milton</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Kitchener</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Pickering</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">George
+                                    Town</span>
+                                <span
+                                    class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-semibold">Downtown
+                                    Toronto</span>
                             </div>
                         </div>
 
