--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,8 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painting Project Gallery | TD Painters Toronto</title>
@@ -218,7 +220,7 @@
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1556912173-3db996ea0622?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/kitchen/k1.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Kitchen Before">
                         <div
@@ -232,7 +234,7 @@
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1556909212-d5b604d0c90d?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/kitchen/h2.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Kitchen Two Tone">
                         <div
@@ -246,7 +248,7 @@
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1484154218962-a1c002085d2f?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/kitchen/k3.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Kitchen Modern">
                         <div
@@ -255,7 +257,7 @@
                         <div class="absolute bottom-0 left-0 p-6">
                             <span
                                 class="bg-brand-blue text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">AFTER</span>
-                            <h3 class="text-white font-bold text-lg">Sleek Grey Finish</h3>
+                            <h3 class="text-white font-bold text-lg">Sleek White Finish</h3>
                             <p class="text-slate-300 text-sm">Brampton • Factory Finish Spray</p>
                         </div>
                     </div>
@@ -283,7 +285,7 @@
                         <div class="absolute bottom-0 left-0 p-6">
                             <span
                                 class="bg-brand-blue text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">AFTER</span>
-                            <h3 class="text-white font-bold text-lg">Charcoal Island</h3>
+                            <h3 class="text-white font-bold text-lg">White Island</h3>
                             <p class="text-slate-300 text-sm">North York • Contrast Design</p>
                         </div>
                     </div>
@@ -307,7 +309,7 @@
             <section id="interiors" class="scroll-mt-40 fade-on-scroll">
                 <div class="flex items-center gap-4 mb-8">
                     <div class="w-12 h-1 bg-brand-green rounded-full"></div>
-                    <h2 class="text-3xl font-bold text-slate-900">Residential Interiors</h2>
+                    <h2 class="text-3xl font-bold text-slate-900">Residential</h2>
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
@@ -326,7 +328,7 @@
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1616594039964-40891a909d93?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/residential/r1.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Bedroom">
                         <div
@@ -336,12 +338,12 @@
                             <span
                                 class="bg-brand-green text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">ACCENT
                                 WALL</span>
-                            <h3 class="text-white font-bold text-lg">Master Bedroom Refresh</h3>
+                            <h3 class="text-white font-bold text-lg">Amazing face lift</h3>
                             <p class="text-slate-300 text-sm">Vaughan • Feature Wall Design</p>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1594445335950-89808d667c3a?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/residential/r2.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Staircase">
                         <div
@@ -351,12 +353,12 @@
                             <span
                                 class="bg-brand-green text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">DETAIL
                                 WORK</span>
-                            <h3 class="text-white font-bold text-lg">High-Foyer & Stairs</h3>
-                            <p class="text-slate-300 text-sm">Richmond Hill • 20ft Ceilings</p>
+                            <h3 class="text-white font-bold text-lg">Perfected color Tone</h3>
+                            <p class="text-slate-300 text-sm">Richmond Hill</p>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[4/3]">
-                        <img src="https://images.unsplash.com/photo-1600210492486-724fe5c67fb0?q=80&w=2000&auto=format&fit=crop"
+                        <img src="assets/images/residential/r3.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Hallway">
                         <div
@@ -365,7 +367,7 @@
                         <div class="absolute bottom-0 left-0 p-6">
                             <span
                                 class="bg-brand-green text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">WALLS</span>
-                            <h3 class="text-white font-bold text-lg">Modern Hallway</h3>
+                            <h3 class="text-white font-bold text-lg">Modern Fireplace</h3>
                             <p class="text-slate-300 text-sm">Scarborough • Neutral Tones</p>
                         </div>
                     </div>
@@ -379,7 +381,7 @@
                         <div class="absolute bottom-0 left-0 p-6">
                             <span
                                 class="bg-brand-green text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">DINING</span>
-                            <h3 class="text-white font-bold text-lg">Elegant Dining</h3>
+                            <h3 class="text-white font-bold text-lg">Elegant living</h3>
                             <p class="text-slate-300 text-sm">Toronto • Waiscotting Paint</p>
                         </div>
                     </div>
@@ -393,8 +395,8 @@
                         <div class="absolute bottom-0 left-0 p-6">
                             <span
                                 class="bg-brand-green text-white text-xs font-bold px-2 py-1 rounded mb-2 inline-block">OFFICE</span>
-                            <h3 class="text-white font-bold text-lg">Cozy Home Office</h3>
-                            <p class="text-slate-300 text-sm">Mississauga • Dark Moody Paint</p>
+                            <h3 class="text-white font-bold text-lg">Cozy Home</h3>
+                            <p class="text-slate-300 text-sm">Mississauga • Fresh Moody Paint</p>
                         </div>
                     </div>
                 </div>
@@ -407,38 +409,38 @@
                 </div>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[16/9]">
-                        <img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/commercial/c1.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Office">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-90">
                         </div>
                         <div class="absolute bottom-0 left-0 p-6">
-                            <h3 class="text-white font-bold text-xl">Tech Office HQ</h3>
+                            <h3 class="text-white font-bold text-xl">Hallway</h3>
                             <p class="text-slate-300">Toronto • 5000 sq ft repaint</p>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[16/9]">
-                        <img src="https://images.unsplash.com/photo-1556742502-ec7c0e9f34b1?q=80&w=1974&auto=format&fit=crop"
+                        <img src="assets/images/commercial/c2.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Retail">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-90">
                         </div>
                         <div class="absolute bottom-0 left-0 p-6">
-                            <h3 class="text-white font-bold text-xl">Boutique Retail Store</h3>
+                            <h3 class="text-white font-bold text-xl">Dental Clinic</h3>
                             <p class="text-slate-300">Yorkville • Overnight Service</p>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[16/9]">
-                        <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
+                        <img src="assets/images/commercial/c4.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Boardroom">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent opacity-90">
                         </div>
                         <div class="absolute bottom-0 left-0 p-6">
-                            <h3 class="text-white font-bold text-xl">Corporate Boardroom</h3>
+                            <h3 class="text-white font-bold text-xl">Retail Space</h3>
                             <p class="text-slate-300">Financial District • Wall Protection</p>
                         </div>
                     </div>
@@ -464,73 +466,73 @@
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?q=80&w=2010&auto=format&fit=crop"
+                        <img src="assets/images/door/d1.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110" alt="Door">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Classic Red Door</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1598337890636-6e06b3282470?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/door/d2.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Garage">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Black Garage Door</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1621503837904-89b5c3789d6e?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/door/d3.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Fence">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Cedar Fence Stain</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1631679706909-1844bbd07221?q=80&w=1992&auto=format&fit=crop"
+                        <img src="assets/images/door/d5.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Shutters">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Window Shutters</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1595428774223-ef52624120d2?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/door/d4.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Blue Door">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Bold Blue Entry</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1510344465492-f027582531a8?q=80&w=1974&auto=format&fit=crop"
+                        <img src="assets/images/door/d6.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Porch">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Stained Porch</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1610471922621-e8d983416562?q=80&w=2069&auto=format&fit=crop"
+                        <img src="assets/images/door/d7.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110"
                             alt="Exterior">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Brick Painting</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden rounded-2xl shadow-lg aspect-[3/4]">
-                        <img src="https://images.unsplash.com/photo-1628744876497-eb30460be9f6?q=80&w=2070&auto=format&fit=crop"
+                        <img src="assets/images/door/d8.jpg"
                             class="w-full h-full object-cover transition duration-700 group-hover:scale-110" alt="Gate">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                         <div class="absolute bottom-4 left-4">
-                            <h3 class="text-white font-bold">Metal Gate</h3>
+                            <h3 class="text-white font-bold"></h3>
                         </div>
                     </div>
                 </div>
