--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
+
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TD Painters - Professional Painting Services in Toronto & GTA</title>
+    <title>Expert Painting Services - Residential & Commercial Painters starts $450 in Brampton, Mississauga, Toronto |
+        TD painters</title>
     <meta name="description"
-        content="Expert residential and commercial painting in Toronto & GTA. Price Match Guarantee + 5% Discount.">
+        content="Get professional painters specializing in residential and commercial painting services. We Serve Oakville, Woodbridge, Milton, North York, Vaughan, Caledon, Etobicoke.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -312,7 +315,7 @@
                         <div class="leading-tight">
                             <span class="block text-sm font-bold text-slate-900 uppercase tracking-wide">Fully
                                 Licensed</span>
-                            <span class="block text-xs text-slate-500 font-medium">Insured & WSIB</span>
+                            <span class="block text-xs text-slate-500 font-medium">& Insured Professionals</span>
                         </div>
                     </div>
 
@@ -329,7 +332,7 @@
                         <div class="leading-tight">
                             <span class="block text-sm font-bold text-slate-900 uppercase tracking-wide">Top
                                 Rated</span>
-                            <span class="block text-xs text-slate-500 font-medium">In Toronto & GTA</span>
+                            <span class="block text-xs text-slate-500 font-medium">In the GTA</span>
                         </div>
                     </div>
 
@@ -453,7 +456,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
+                            <img src="assets/images/home/h5.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Residential">
                         </div>
@@ -470,7 +473,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
+                            <img src="assets/images/home/h2.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Commercial">
                         </div>
@@ -487,7 +490,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?q=80&w=2069&auto=format&fit=crop"
+                            <img src="assets/images/home/h6.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Popcorn Removal">
                         </div>
@@ -505,7 +508,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1556911220-e15b29be8c8f?q=80&w=2070&auto=format&fit=crop"
+                            <img src="assets/images/home/h4.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Cabinets">
                         </div>
@@ -522,7 +525,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1513694203232-719a280e022f?q=80&w=2069&auto=format&fit=crop"
+                            <img src="assets/images/home/h3.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Door Fence">
                         </div>
@@ -539,7 +542,7 @@
                     <div
                         class="card group bg-white rounded-2xl shadow-sm hover:shadow-2xl transition duration-300 overflow-hidden flex flex-col fade-on-scroll hover:-translate-y-2">
                         <div class="h-60 overflow-hidden">
-                            <img src="assets/images/bathroom.jpg"
+                            <img src="assets/images/home/h1.jpg"
                                 class="w-full h-full object-cover transition duration-500 group-hover:scale-110"
                                 alt="Bathroom">
                         </div>
@@ -641,7 +644,12 @@
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Milton</li>
                             <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                George Town</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
                                 Downtown Toronto</li>
+                            <li class="flex items-center gap-2"><span class="text-brand-green font-bold">✓</span>
+                                Richmond Hill</li>
+
 
 
                         </ul>
@@ -697,58 +705,6 @@
             </div>
         </section>
 
-        <section class="py-24 bg-slate-50">
-            <div class="container mx-auto px-4 max-w-4xl">
-                <h2 class="text-4xl font-bold text-slate-900 text-center mb-12">Frequently Asked Questions</h2>
-                <div class="faq-accordion space-y-4">
-                    <div
-                        class="faq-item bg-white rounded-lg border border-slate-200 overflow-hidden hover:shadow-md transition">
-                        <button
-                            class="faq-question w-full text-left p-6 font-semibold text-slate-700 flex justify-between items-center transition-colors">
-                            How long will it take to paint my house?
-                            <span class="icon-plus text-brand-green text-2xl transition-transform duration-300">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <div class="p-6 pt-0 text-slate-600 leading-relaxed border-t border-slate-100">
-                                The timeline depends on the size and scope of the project. An average-sized room
-                                typically takes 1-2 days. A full interior can take 3-7 days. We provide a detailed
-                                timeline with your quote.
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="faq-item bg-white rounded-lg border border-slate-200 overflow-hidden hover:shadow-md transition">
-                        <button
-                            class="faq-question w-full text-left p-6 font-semibold text-slate-700 flex justify-between items-center transition-colors">
-                            Do I need to move my furniture?
-                            <span class="icon-plus text-brand-green text-2xl transition-transform duration-300">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <div class="p-6 pt-0 text-slate-600 leading-relaxed border-t border-slate-100">
-                                We ask that you remove small, fragile, and personal items from the room. Our team will
-                                handle moving larger furniture to the center of the room and covering it securely with
-                                plastic.
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="faq-item bg-white rounded-lg border border-slate-200 overflow-hidden hover:shadow-md transition">
-                        <button
-                            class="faq-question w-full text-left p-6 font-semibold text-slate-700 flex justify-between items-center transition-colors">
-                            What kind of paint do you use?
-                            <span class="icon-plus text-brand-green text-2xl transition-transform duration-300">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <div class="p-6 pt-0 text-slate-600 leading-relaxed border-t border-slate-100">
-                                We use high-quality, low-VOC or zero-VOC paints from trusted brands like
-                                Sherwin-Williams and Benjamin Moore to ensure a durable, beautiful, and safe finish for
-                                your family.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <section id="contact" class="py-24 bg-white relative overflow-hidden">
